examples/test/testpolicy4864.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4864
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key2: value25
      key13: value4
      key11: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value22
      podSelector:
        matchLabels:
          key34: value48
          key42: value39
          key33: value7
